# News_Search_Engine

./: .gitignore  README.md
backend/: .gitignore  fix_categories.py  init_db.py  main.py  pyproject.toml  run_ingestion.py
backend/app/: main.py
backend/app/api/: routes_articles.py  routes_auth.py  routes_search.py
backend/app/core/: category_map.py  celery_app.py  deps.py  rate_limit.py  sanitize.py  settings.py  validators.py
backend/app/db/: database.py  models.py  schema.py
backend/app/schemas/: article.py  auth.py  search.py
backend/app/services/: auth.py  bm25.py  bm25_sync.py  embedding.py  ingestion.py  ingestion_service.py  interest.py  ml_executor.py  reranker.py  scraper.py  search.py  text_processing.py  token_store.py
backend/app/tasks/: ingestion_tasks.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/article/[id]/: page.tsx
frontend/src/app/category/[slug]/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: ArticleCard.tsx  ArticleShareBar.tsx  AuthModal.tsx  Footer.tsx  Header.tsx  HomeContent.tsx  LoadMoreArticles.tsx  SearchModal.tsx  SearchResults.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.tsx  useCategories.tsx  useFollows.ts  useKeyboardShortcut.ts
frontend/src/lib/: api.ts  mock.ts  sanitize.ts
