[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.0.0",
    "fastapi>=0.136.3",
    "httpx[httpx]>=0.28.1",
    "nltk>=3.9.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.5.1",
    "spacy>=3.8.14",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "redis>=8.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
]
